--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@ layout: default
 ---
 
 <h2>Conheça nossos aplicativos</h2>
+
 <div>
-<h3>Minhas Despesas</h3>
-<p><strong>• <a href="https://play.google.com/store/apps/details?id=com.giveapps.minhasdespesas" target="_blank">Minhas Despesas</a></strong></p>
+  <h3><a href="https://giveappsoficial.github.io/minhas-despesas/" target="_blank">Minhas Despesas</a></h3>
+  <p>Aplicativo de controle financeiro pessoal que permite registrar despesas e receitas, organizar por parcelas ou recorrência mensal, e receber lembretes de vencimento. Simples, prático e ideal para manter suas finanças em dia.</p>
 </div>
