--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ layout: default
 <h2>Conheça nossos aplicativos</h2>
 
 <div>
-  <h3><a href="https://giveappsoficial.github.io/minhas-despesas/" target="_blank">Minhas Despesas</a></h3>
+  <h3><a href="https://giveappsoficial.github.io/minhas-despesas/">Minhas Despesas</a></h3>
   <p>Aplicativo de controle financeiro pessoal que permite registrar despesas e receitas, organizar por parcelas ou recorrência mensal, e receber lembretes de vencimento. Simples, prático e ideal para manter suas finanças em dia.</p>
 </div>
