--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ layout: default
 
 <div>
   <h3><a href="https://giveappsoficial.github.io/minhas-despesas/">Minhas Despesas</a></h3>
-  <img src="https://giveappsoficial.github.io/images/minhas_despesas_logotipo.png" width="100px" height="100px"/><p>Aplicativo de controle financeiro pessoal que permite registrar despesas e receitas, organizar por parcelas ou recorrência mensal, e receber lembretes de vencimento. Simples, prático e ideal para manter suas finanças em dia.</p>
+  <img style="display:inline-block;width:17%;vertical-align:middle" src="https://giveappsoficial.github.io/images/minhas_despesas_logotipo.png"/><p style="display:inline-block;width:80%;margin-left:2%;vertical-align:middle">Aplicativo de controle financeiro pessoal que permite registrar despesas e receitas, organizar por parcelas ou recorrência mensal, e receber lembretes de vencimento. Simples, prático e ideal para manter suas finanças em dia.</p>
 </div>
 
 <div>
   <h3><a href="https://giveappsoficial.github.io/meu-remedio/">Meu Remédio</a></h3>
-  <img src="https://giveappsoficial.github.io/images/meu_remedio_logotipo.png" width="100px" height="100px"/><p>O Meu Remédio é o aplicativo completo para quem precisa de lembretes com alarme, reforços automáticos e total personalização.</p>
+  <img style="display:inline-block;width:17%;vertical-align:middle" src="https://giveappsoficial.github.io/images/meu_remedio_logotipo.png"/><p style="display:inline-block;width:80%;margin-left:2%;vertical-align:middle">O Meu Remédio é o aplicativo completo para quem precisa de lembretes com alarme, reforços automáticos e total personalização.</p>
 </div>
